--- a/slides/computing_bootcamp_2018.Rmd
+++ b/slides/computing_bootcamp_2018.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DSS Comptuing Bootcamp"
+title: "DSS Computing Bootcamp"
 author: "Mine Çetinkaya-Rundel and Colin Rundel"
 date: "Aug 20, 2018"
 output:
